corrected z-index of content border top-left and bottom right frames

--- a/static/css/login.css
+++ b/static/css/login.css
@@ -33,7 +33,6 @@ body {
     top: 12px;
     width: 30px;
     height: 30px;
-    z-index: var(--z-1);
     content: "";
     border-left: 5px solid var(--color-tertiary);
     border-top: 5px solid var(--color-tertiary);
@@ -46,7 +45,6 @@ body {
     bottom: 12px;
     width: 30px;
     height: 30px;
-    z-index: var(--z-1);
     content: "";
     border-right: 5px solid var(--color-tertiary);
     border-bottom: 5px solid var(--color-tertiary);
